To eliminate the knob flickering issue, used monospaced font to display the time which is causing varied bar width due to not monospaced numbers.

--- a/src/components/Player/Progress.module.css
+++ b/src/components/Player/Progress.module.css
@@ -1,3 +1,11 @@
+.progress {
+    font-family: mono-bold;
+}
+
+.label {
+    font-size: 1rem;
+}
+
 ion-range::part(pin) {
     width: 3rem;
     border-radius: 4px;
